packages/kit/test/apps/basics/src/routes/errors/page-endpoint/post-implicit/+page.server.js
import { FancyError } from '../_shared.js';

export const actions = () => {
	throw new FancyError('oops');
};
